THRIFT-2981: IDL with no namespace produces unparsable PHP Client: php Patch: Randy Abernethy

The compiler is generating the namespace statement even when there isn't one, which blows up the PHP interpreter. Patch supresses service and type file output of namespace unless there actually is one.